# musmatic

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  fix-c-wrapper.sh  get-dep.sh  pyproject.toml
.github/workflows/: ci.yml  node-ci.yml
LICENSES/: README
app/: .eslintrc.json  package-lock.json  package.json
app/frontend/: .eslintrc.json
app/frontend/public/: index.html
app/frontend/src/: App.scss  App.test.tsx  App.tsx  index.css  index.tsx  react-app-env.d.ts  utils.js
app/frontend/src/components/: SVGKeyboard.test.tsx  SVGKeyboard.tsx
app/frontend/src/components/ScoreViewer/: ScoreViewer.scss  ScoreViewer.test.tsx  ScoreViewer.tsx
app/frontend/src/components/Toolbar/: Toolbar.scss  Toolbar.test.tsx  Toolbar.tsx
app/public/: index.html
app/src/: App.tsx  index.tsx  react-app-env.d.ts  utils.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/ScoreViewer/: ScoreViewer.jsx  ScoreViewer.test.tsx  ScoreViewer.tsx
app/src/components/Toolbar/: Toolbar.scss
core/: .gitignore  Cargo.toml  build.rs  get-dep.sh
core/src/: lib.rs  main.rs  verovio_bindings.rs
old-rust/: Cargo.toml
old-rust/src/: main.rs  verovio_bindings.rs
src/: lib.rs  main.rs
ui/: .gitignore  Cargo.toml  build.sh
ui/docker/: Dockerfile  apache-config.conf
ui/html/: config.example.js  index.html  modals.html
ui/html/css/: style.css
ui/html/musmatic/: musmatic.js
ui/src/: lib.rs  xmlwriter.rs
