[package]
name = "musmatic"
version = "0.1.0"
authors = ["adrq"]
edition = "2021"

[lib]
name = "musmatic"
crate-type = ["rlib"]

[[bin]]
name = "musmatic-cli"
path = "src/main.rs"

[dependencies]
serde_json = "^1.*"
serde = {version = "^1.*", features = ["derive"]}

[build-dependencies]
cmake = "*"
bindgen = "0.42.*"
